--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	<body>
 		<h1>Bienvenido a la web del Estudio Fotografico FotoCool2000</h1>
 		<h2>Esta es la página donde podrás ver nuestros trabajos</h2>
+		<p>Esta es la página donde podrás ver nuestros trabajos</p>
 	</body>
 </html>
